--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </nav>
 
         <!-- LOGO -->
-        <div >
-            <img class="logo" src="./images/Logo.png" >
+        <div  class="logo" >
+            <img src="./images/Logo.png" >
         </div>
 
         <!-- Text -->
@@ -168,7 +168,7 @@
         <!-- Download -->
         <div class="footer-section">
             <div class="footer-left">
-                <img style="height: 15px;width:35px" class="footer-logo"src="./images/Logo.png" alt="">
+                <img class="footer-logo"src="./images/Logo.png" alt="">
                 <ul class="list">
                     <li class="list-items">@lopem ipsum</li>
                     <li class="list-items">Home</li>
